--- a/micronaut-cli.yml
+++ b/micronaut-cli.yml
@@ -1,6 +1,6 @@
 applicationType: default
 defaultPackage: com.smartbrain
-testFramework: spock
+testFramework: kotest
 sourceLanguage: kotlin
 buildTool: gradle_kotlin
-features: [app-name, gradle, http-client, kotlin, kotlin-application, logback, netty-server, readme, shade, spock, yaml]
+features: [app-name, gradle, http-client, kotest, kotlin, kotlin-application, logback, netty-server, readme, shade, yaml]
