Seperate calls to machine learning apit

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,9 @@
 micronaut:
   application:
     name: smartbrainApiKotlin
+  env:
+    deduction: false
+
+clarifai:
+  workflowId: Demographics
+  apiKey:
