Enable CORS for React App. Rename bounding box attributes to be inline with Clarifai

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,9 @@ micronaut:
     name: smartbrainApiKotlin
   env:
     deduction: false
+  server:
+    cors:
+      enabled: true
 
 clarifai:
   workflowId: Demographics
